--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2579,7 +2579,7 @@
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #1a237e;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
@@ -3269,7 +3269,7 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #536dfe;
 		}
 
 		.wrapper.style3-alt {
