--- a/assets/css/style12.css
+++ b/assets/css/style12.css
@@ -1,7 +1,7 @@
 /* Main stuff */
 .text {
   fill: none;
-  stroke-width: 6;
+  stroke-width: 10;
   stroke-linejoin: round;
   stroke-dasharray: 70 330;
   stroke-dashoffset: 0;
@@ -34,3 +34,22 @@
 @keyframes stroke {
   100% {
     stroke-dashoffset: -400; } }
+/* Other stuff */
+html,
+body {
+  height: 100%; }
+
+body {
+  background: #1A237E;
+  color: #fff; }
+
+.content {
+  font: 800 14.5em/1  'Open Sans', Impact; }
+
+svg {
+  width: 50%;
+  margin: 0 auto 50px;
+  display: block;
+  text-transform: uppercase; }
+
+/*# sourceMappingURL=style12.css.map */
