--- a/assets/css/style_maroc.css
+++ b/assets/css/style_maroc.css
@@ -8,23 +8,23 @@
   -webkit-animation: stroke 6s infinite linear;
   animation: stroke 12s infinite linear; }
   .text:nth-child(5n + 1) {
-    stroke: #C1272D;
+    stroke: #00C853;
     -webkit-animation-delay: -1.2s;
     animation-delay: -1.2s; }
   .text:nth-child(5n + 2) {
-    stroke: #006233;
+    stroke: #FFEB3B;
     -webkit-animation-delay: -2.4s;
     animation-delay: -2.4s; }
   .text:nth-child(5n + 3) {
-    stroke: #C1272D;
+    stroke: #FF9800;
     -webkit-animation-delay: -3.6s;
     animation-delay: -3.6s; }
   .text:nth-child(5n + 4) {
-    stroke: #006233;
+    stroke: #AEEA00;
     -webkit-animation-delay: -4.8s;
     animation-delay: -4.8s; }
   .text:nth-child(5n + 5) {
-    stroke: #C1272D;
+    stroke: #FF5722;
     -webkit-animation-delay: -6s;
     animation-delay: -6s; }
 
@@ -40,7 +40,7 @@ body {
   height: 100%; }
 
 body {
-  background: #1A237E;
+  background: #493382;
   color: #fff; }
 
 .content {
@@ -50,6 +50,8 @@ svg {
   width: 80%;
   margin: 0 auto 20px;
   display: block;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  letter-spacing: 60px
+   }
 
 /*# sourceMappingURL=style12.css.map */
