--- a/assets/css/style_maroc.css
+++ b/assets/css/style_maroc.css
@@ -1,4 +1,4 @@
-/* Main stuff */
+/* MAROC */
 .text {
   fill: none;
   stroke-width: 15;
@@ -34,6 +34,9 @@
 @keyframes stroke {
   100% {
     stroke-dashoffset: -400; } }
+
+/* ENSA */
+
 /* Other stuff */
 html,
 body {
