--- a/assets/css/style_international.css
+++ b/assets/css/style_international.css
@@ -34,6 +34,8 @@
 @keyframes stroke {
   100% {
     stroke-dashoffset: -400; } }
+
+    
 /* Other stuff */
 html,
 body {
@@ -50,6 +52,8 @@ svg {
   width: 80%;
   margin: 0 auto 20px;
   display: block;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  letter-spacing: 60px;
+  }
 
 /*# sourceMappingURL=style12.css.map */
