--- a/assets/css/style_maroc.css
+++ b/assets/css/style_maroc.css
@@ -1,4 +1,4 @@
-/* MAROC */
+/* SILICON VALLEY */
 .text {
   fill: none;
   stroke-width: 15;
@@ -35,7 +35,6 @@
   100% {
     stroke-dashoffset: -400; } }
 
-/* ENSA */
 
 /* Other stuff */
 html,
