--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3247,8 +3247,12 @@
 			background-color: #261c3e;
 		}
 
+
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-image: -moz-linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+			background-image: -webkit-linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+			background-image: -ms-linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+			background-image: linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
 		}
 
 		.wrapper.style1-alt {
@@ -3271,6 +3275,21 @@
 			background-color: #953d75;
 		}
 
+		
+
+		.wrapper.maroc {
+			background-image: -moz-linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
+			background-image: -webkit-linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
+			background-image: -ms-linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
+			background-image: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
+		}
+
+		.wrapper.international {
+			background-image: -moz-linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+			background-image: -webkit-linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+			background-image: -ms-linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+			background-image: linear-gradient(to top, #0250c5 0%, #d43f8d 100%);
+		}
 		.wrapper.fullscreen {
 			display: -moz-flex;
 			display: -webkit-flex;
